--- a/index.html
+++ b/index.html
@@ -612,39 +612,25 @@ Conducting technical research and development to enable  contionius innovation w
 										<div class="startbullet"></div>
 										<div class="col-md-12 item_outerx">
 											<div class="row">
-												<div class="col-lg-6 col-lg-offset-3 col-md-7 col-md-offset-3 col-sm-12 col-xs-12 item_outer anim_element" data-animation="fadeInRight" data-animation-delay="100">
+												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="400">
 													<div class="item">
-														<div class="date" style="padding-left : -80px;">MAY 2015 - TILL DATE</div>
+														<div class="date" style="padding-left : -80px;">MAY 2014 - TILL DATE</div>
 														<div class="bullet"></div>
 														<div class="content">
 															<div class="title">DevOPS Lead and Solutions Architect</div>
 															<div class="subtitle">TATA Consultancy Services Ltd.</div>
+															<div class="subtitle">(GE Digital - On Contract)</div>
 															<div class="body">
-																Worked as Lead for DevOPS team of 10 memebers.
+															    Design and implement scalable and highly available enterprise application infrastructure.
 																Automation of AWS cloud infrastructure setups using Chef and it's integration with CM tool 'scalr'.
-																Delivered highly scalable and fault taulerant solutions for cloud applications.
-																Microsoft Azure migrations for mission critical applications with hybrid cloud setup.
-																Lead the implementation of contionius interation and Continuous Deployments on cloud platform.
-															</div>
-														</div>
-														<div class="clear"></div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-12 item_outerx">
-											<div class="row">
-												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="200">
-													<div class="item">
-														<div class="date">APR 2014 - MAY 2015</div>
-														<div class="bullet"></div>
-														<div class="content">
-															<div class="title">DevOPS and Cloud Engineer</div>
-															<div class="subtitle">Tata Consultancy Services Ltd.</div>
-															<div class="body">
-																Worked at client location providing solutions to cater the customer needs.
-																Continuous Integration, Continuous Deployments, Automated configuration management using opensource tools such as puppet.
-																Worked on AWS cloud migration for various on prem services.
+																Leading the on-premises to AWS cloud migration effort.
+																Microsoft Azure migrations for some mission critical applications with hybrid cloud setup.
+																Automation and configuration management.
+																Mentor and lead junior team members.
+																Evaluating technology options and providing direction to leadership.
+																Monitoring and performance engineering.
+																Lead the implementation of contionius interation and Continuous Deployments.
+																Worked at client location for 2 years (Fairfield, CT, USA) ensuring quality deliverables to customer.
 															</div>
 														</div>
 														<div class="clear"></div>
@@ -659,12 +645,13 @@ Conducting technical research and development to enable  contionius innovation w
 														<div class="date">MAY 2010 - March 2014</div>
 														<div class="bullet"></div>
 														<div class="content">
-															<div class="title">Senior Operations Engineer</div>
+															<div class="title">Senior WebOps Engineer</div>
 															<div class="subtitle">Tata Consultancy Services Ltd.</div>
+															<div class="subtitle">(GE Corporate - On Contract)</div>
 															<div class="body">
-																Desing and setup clustered production environments for enterprise applications,
-																Implemented DR solutions, Web and App server setups, Automation of deployments, Custom Monitoring using opensource tools such as ICINGA.
-																In house distributed CDN network using varnish cache. On prem queuing solution using rabbitMQ.
+																Desing and setup clustered production environments for enterprise applications.
+																Implemented DR solutions. Web and App server setups, Automation of deployments. Custom Monitoring using opensource tools such as ICINGA.
+																Designed and implemented a highly available and performant CDN and MQ solution (on-premise)
 															</div>
 														</div>
 														<div class="clear"></div>
@@ -681,9 +668,10 @@ Conducting technical research and development to enable  contionius innovation w
 														<div class="content">
 															<div class="title">Web Infrastructure Engineer</div>
 															<div class="subtitle">Tata Consultancy Services Ltd.</div>
+															<div class="subtitle">(NBCU - On Contract)</div>
 															<div class="body">
-																Web Servers, Application servers management. Production suppoort for enterprise applications.
-																System administration, Server and application monitoring
+																Web Servers, Application servers management. Deployments and Production suppoort for enterprise applications.
+																System administration, Server and application monitoring.
 															</div>
 														</div>
 														<div class="clear"></div>
