--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
 
 															<!-- CV Download Button -->
 															<div class="about_user_download_cv col-md-12">
-																<a href="#" class="btn large iconbtn"><i class="fa fa-download"></i><span>DOWNLOAD CV</span></a>
+																<a href="./img/ASHISH_MHATRE_CV.pdf" target="_blank" class="btn large iconbtn"><i class="fa fa-download"></i><span>DOWNLOAD CV</span></a>
+																
+																<!-- <a href="/img/ASHISH MHATRE RESUME.pdf" download="newname" target="_blank" class="et_pb_button" >DOWNLOAD CV</a> -->
 															</div>
 															<!-- /CV Download Button -->
 
@@ -533,6 +535,92 @@ Conducting technical research and development to enable  contionius innovation w
 							<div class="col-md-12 page_title"><span>RESUME</span></div>
 							<!-- /Page Title -->
 
+							<!-- Employment -->
+							<div class="col-md-12">
+								<div class="eduempl employment section_block">
+									<div class="section_title">
+										<i class="fa fa-suitcase color"></i>
+										<span>EMPLOYMENT</span>
+									</div>
+									<div class="items">
+										<div class="startbullet"></div>
+										<div class="col-md-12 item_outerx">
+											<div class="row">
+												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="400">
+													<div class="item">
+														<div class="date" style="padding-left : -80px;">MAY 2014 - TILL DATE</div>
+														<div class="bullet"></div>
+														<div class="content">
+															<div class="title">DevOPS Lead and Solutions Architect</div>
+															<div class="subtitle">TATA Consultancy Services Ltd.</div>
+															<div class="subtitle">(GE Digital - On Contract)</div>
+															<div class="body">
+															    &bull; Design and implement scalable and highly available enterprise application infrastructure.</br>
+																&bull; Automation of AWS cloud infrastructure setups using Chef and it's integration with CM tool 'scalr'.</br>
+																&bull; Leading the on-premises to AWS cloud migration effort.</br>
+																&bull; Microsoft Azure migrations for some mission critical applications with hybrid cloud setup.</br>
+																&bull; Automation and configuration management.</br>
+																&bull; Mentor and lead junior team members.</br>
+																&bull; Evaluating technology options and providing direction to leadership.</br>
+																&bull; Monitoring and performance engineering.</br>
+																&bull; Lead the implementation of Continuous Integration and Continuous Deployments.</br>
+																&bull; Worked at client location for 2 years (Fairfield, CT, USA) ensuring quality deliverables to customer.</br>
+															</div>
+														</div>
+														<div class="clear"></div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-12 item_outerx">
+											<div class="row">
+												<div class="col-lg-6 col-lg-offset-3 col-md-7 col-md-offset-3 col-sm-12 col-xs-12 item_outer anim_element" data-animation="fadeInRight" data-animation-delay="300">
+													<div class="item">
+														<div class="date">MAY 2010 - March 2014</div>
+														<div class="bullet"></div>
+														<div class="content">
+															<div class="title">Senior WebOps Engineer</div>
+															<div class="subtitle">Tata Consultancy Services Ltd.</div>
+															<div class="subtitle">(GE Corporate - On Contract)</div>
+															<div class="body">
+																&bull; Designed and setup clustered production environments for enterprise applications.</br>
+																&bull; Implemented DR solutions. Web and App server setups, Automation of deployments.</br>
+																&bull; Custom Monitoring using opensource tools such as ICINGA.</br>
+																&bull; Designed and implemented a highly available and performant CDN and MQ solution (on-premise)</br>
+															</div>
+														</div>
+														<div class="clear"></div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-md-12 item_outerx">
+											<div class="row">
+												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="400">
+													<div class="item">
+														<div class="date">SEP 2008 - APR 2010</div>
+														<div class="bullet"></div>
+														<div class="content">
+															<div class="title">Web Infrastructure Engineer</div>
+															<div class="subtitle">Tata Consultancy Services Ltd.</div>
+															<div class="subtitle">(NBCU - On Contract)</div>
+															<div class="body">
+																&bull; Web Servers, Application servers' management.</br>
+																&bull; Deployments and Production support for enterprise applications.</br>
+																&bull; System administration, Server and application monitoring.</br>
+															</div>
+														</div>
+														<div class="clear"></div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="endbullet"></div>
+									</div>
+								</div>
+							</div>
+							<!-- /Employment -->
+							
 							<!-- Education -->
 							<div class="col-md-12">
 								<div class="eduempl education section_block">
@@ -599,91 +687,7 @@ Conducting technical research and development to enable  contionius innovation w
 									</div>
 								</div>
 							</div>
-							<!-- /Education -->
-
-							<!-- Employment -->
-							<div class="col-md-12">
-								<div class="eduempl employment section_block">
-									<div class="section_title">
-										<i class="fa fa-suitcase color"></i>
-										<span>EMPLOYMENT</span>
-									</div>
-									<div class="items">
-										<div class="startbullet"></div>
-										<div class="col-md-12 item_outerx">
-											<div class="row">
-												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="400">
-													<div class="item">
-														<div class="date" style="padding-left : -80px;">MAY 2014 - TILL DATE</div>
-														<div class="bullet"></div>
-														<div class="content">
-															<div class="title">DevOPS Lead and Solutions Architect</div>
-															<div class="subtitle">TATA Consultancy Services Ltd.</div>
-															<div class="subtitle">(GE Digital - On Contract)</div>
-															<div class="body">
-															    Design and implement scalable and highly available enterprise application infrastructure.
-																Automation of AWS cloud infrastructure setups using Chef and it's integration with CM tool 'scalr'.
-																Leading the on-premises to AWS cloud migration effort.
-																Microsoft Azure migrations for some mission critical applications with hybrid cloud setup.
-																Automation and configuration management.
-																Mentor and lead junior team members.
-																Evaluating technology options and providing direction to leadership.
-																Monitoring and performance engineering.
-																Lead the implementation of contionius interation and Continuous Deployments.
-																Worked at client location for 2 years (Fairfield, CT, USA) ensuring quality deliverables to customer.
-															</div>
-														</div>
-														<div class="clear"></div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-12 item_outerx">
-											<div class="row">
-												<div class="col-lg-6 col-lg-offset-3 col-md-7 col-md-offset-3 col-sm-12 col-xs-12 item_outer anim_element" data-animation="fadeInRight" data-animation-delay="300">
-													<div class="item">
-														<div class="date">MAY 2010 - March 2014</div>
-														<div class="bullet"></div>
-														<div class="content">
-															<div class="title">Senior WebOps Engineer</div>
-															<div class="subtitle">Tata Consultancy Services Ltd.</div>
-															<div class="subtitle">(GE Corporate - On Contract)</div>
-															<div class="body">
-																Desing and setup clustered production environments for enterprise applications.
-																Implemented DR solutions. Web and App server setups, Automation of deployments. Custom Monitoring using opensource tools such as ICINGA.
-																Designed and implemented a highly available and performant CDN and MQ solution (on-premise)
-															</div>
-														</div>
-														<div class="clear"></div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="col-md-12 item_outerx">
-											<div class="row">
-												<div class="col-lg-6 col-lg-pull-2 col-lg-offset-1 col-md-7 col-md-pull-2 col-md-offset-1 col-sm-12 col-xs-12 item_outer inv anim_element" data-animation="fadeInLeft" data-animation-delay="400">
-													<div class="item">
-														<div class="date">SEP 2008 - APR 2010</div>
-														<div class="bullet"></div>
-														<div class="content">
-															<div class="title">Web Infrastructure Engineer</div>
-															<div class="subtitle">Tata Consultancy Services Ltd.</div>
-															<div class="subtitle">(NBCU - On Contract)</div>
-															<div class="body">
-																Web Servers, Application servers management. Deployments and Production suppoort for enterprise applications.
-																System administration, Server and application monitoring.
-															</div>
-														</div>
-														<div class="clear"></div>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="endbullet"></div>
-									</div>
-								</div>
-							</div>
-							<!-- /Employment -->
+							<!-- /Education -->							
 
 							<!-- Skills -->
 							<div class="col-md-12">
