--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html>
 <head>
 	<title>Ashish Mhatre</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">   
     <link rel="shortcut icon" href="img/favicon.html">
@@ -696,122 +713,77 @@ Conducting technical research and development to enable  contionius innovation w
 										<i class="fa fa-bolt color"></i>
 										<span>SKILLS</span>
 									</div>
-									<div class="items">
-
-										<!-- Skills Item -->
-										<div class="skill_item">
-											<div class="title"><span>DESIGN</span></div>
-											<div class="skill_items charts">
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="100">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="90">
+									<div class="skill_items charts">
+									<div class="col-md-12">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="90">
 		                                                    <div class="num">90</div>
 		                                                </div>
-		                                                <div class="name">HTML5</div>
+		                                                <div class="name">Web Administration</div>
 		                                            </div>
 		                                        </div>
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="200">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="75">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
+		                                                    <div class="num">80</div>
+		                                                </div>
+		                                                <div class="name">Configuration Management</div>
+		                                            </div>
+		                                        </div>
+		                                        <div class="col-md-12">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
 		                                                    <div class="num">75</div>
 		                                                </div>
-		                                                <div class="name">CSS3</div>
+		                                                <div class="name">CI-CD</div>
 		                                            </div>
 		                                        </div>
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="300">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="50">
-		                                                    <div class="num">50</div>
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
+		                                                    <div class="num">75</div>
 		                                                </div>
-		                                                <div class="name">JQUERY</div>
-		                                            </div>
-		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="400">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="30">
-		                                                    <div class="num">30</div>
-		                                                </div>
-		                                                <div class="name">PHOTOSHOP</div>
-		                                            </div>
-		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="500">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="66">
-		                                                    <div class="num">66</div>
-		                                                </div>
-		                                                <div class="name">PHP</div>
-		                                            </div>
-		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft" data-animation-delay="600">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="95">
-		                                                    <div class="num">95</div>
-		                                                </div>
-		                                                <div class="name">DESIGN</div>
+		                                                <div class="name">Monitoring</div>
 		                                            </div>
 		                                        </div>
 											</div>
-										</div>
-										<!-- /Skills Item -->
-
-										<!-- Skills Item -->
-										<div class="skill_item">
-											<div class="title"><span>DEVELOPMENT</span></div>
-											<div class="skill_items charts">
+											<div class="skill_items charts" style="margin-top:35px">
+											
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="100">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="90">
-		                                                    <div class="num">90</div>
-		                                                </div>
-		                                                <div class="name">HTML5</div>
-		                                            </div>
-		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="200">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="75">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
 		                                                    <div class="num">75</div>
 		                                                </div>
-		                                                <div class="name">CSS3</div>
+		                                                <div class="name">Analytics</div>
 		                                            </div>
 		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="300">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="50">
+												<div class="col-md-12">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
+		                                                    <div class="num">80</div>
+		                                                </div>
+		                                                <div class="name">AWS</div>
+		                                            </div>
+		                                        </div>
+												<div class="col-md-12">
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="50">
 		                                                    <div class="num">50</div>
 		                                                </div>
-		                                                <div class="name">JQUERY</div>
+		                                                <div class="name">Azure</div>
 		                                            </div>
 		                                        </div>
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="400">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="30">
-		                                                    <div class="num">30</div>
+		                                            <div class="item anim_element" data-animation="fadeInLeft">
+		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
+		                                                    <div class="num">80</div>
 		                                                </div>
-		                                                <div class="name">PHOTOSHOP</div>
+		                                                <div class="name">Scripting</div>
 		                                            </div>
 		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="500">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="66">
-		                                                    <div class="num">66</div>
-		                                                </div>
-		                                                <div class="name">PHP</div>
-		                                            </div>
-		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInRight" data-animation-delay="600">
-		                                                <div class="num_chart" data-bar-color="#cccccc" data-bar-width="130" data-percent="95">
-		                                                    <div class="num">95</div>
-		                                                </div>
-		                                                <div class="name">DESIGN</div>
-		                                            </div>
-		                                        </div>
-											</div>
-										</div>
-										<!-- /Skills Item -->
-
-
 									</div>
+									
+										<!-- /Skills Item -->
 								</div>
 							</div>
 							<!-- /Skills -->
@@ -825,38 +797,56 @@ Conducting technical research and development to enable  contionius innovation w
 				<!-- Clients Parallax -->
 				<div class="parallax_item clients">
 					<div class="parallax_layer"></div>
-					<div class="overlay"></div>
+					<!-- <div class="overlay"></div> -->
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="title parallax_title col-md-12"><span>MY TOOLBOX</span></div>
+								<div class="title parallax_title2 col-md-12"><span style="color:black">MY TOOLBOX</span></div>
 								<div class="client_items col-md-12">							
-									<div align="center" class="item anim_element" data-animation="flipInY">
-										<a href="#"><img align="middle" src="img/aws.png" alt="img" width="100" height="100" /></a>
+									<!-- <div align="center" class="item anim_element" data-animation="flipInY"> -->
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/aws.png" alt="img" width="200" height="80" /></a>
 									</div>
-									<div align="center" class="item anim_element" data-animation="flipInY">								
-									<a href="#"><img align="middle" src="img/azure.png" alt="img" width="200" height="100" /></a>
+									<div align="center" >								
+									<a href="#"><img align="middle" src="img/azure.png" alt="img" width="175" height="80" /></a>
 									</div>
-									<div align="center" class="item anim_element" data-animation="flipInY" data-animation-delay="300">
-									<a href="#"><img align="middle" src="img/chef.png" alt="img" width="100" height="100" /></a>
+									<div align="center" >
+									<a href="#"><img align="middle" src="img/chef.png" alt="img" width="90" height="80" /></a>
 									</div>
-									<div align="center" class="item anim_element" data-animation="flipInY">
-										<a href="#"><img align="middle" src="img/puppet.png" alt="img" width="100" height="100" /></a>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/puppet.png" alt="img" width="90" height="80" /></a>
 									</div>
-									<div align="center" class="item anim_element" data-animation="flipInY">
+									<div align="center" >
 										<a href="#"><img align="middle" src="img/docker.png" alt="img" width="150" height="100" /></a>
 									</div>
-									<div align="center" class="item anim_element" data-animation="flipInY">
-										<a href="#"><img align="middle" src="img/icinga.png" alt="img"  width="200" height="100" /></a>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/icinga.png" alt="img"  width="175" height="80" /></a>
 									</div>	
-									<div align="center" class="item anim_element" data-animation="flipInY">
-										<a href="#"><img align="middle" src="img/newrelic.jpeg" alt="img" width="100" height="100" /></a>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/new-relic.png" alt="img" width="100" height="80" /></a>
 									</div>	
-									<div align="center" class="item anim_element" data-animation="flipInY">
+									<!--
+									<div align="center" >
 										<a href="#"><img align="middle" src="img/nexus.png" alt="img" width="200" height="100" /></a>
-									</div>		
-									<div align="center" class="item anim_element" data-animation="flipInY">
-										<a href="#"><img align="middle" src="img/elastic.jpeg" alt="img" width="100" height="100" /></a>										
+									</div>
+									-->
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/elastic.png" alt="img" width="200" height="70" /></a>										
+									</div>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/tomcat.png" alt="img" width="160" height="80" /></a>										
+									</div>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/apache.png" alt="img" width="175" height="80" /></a>										
+									</div>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/NGINX.png" alt="img" width="175" height="70" /></a>										
+									</div>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/rabbitMQ.png" alt="img" width="175" height="70" /></a>										
+									</div>
+									<div align="center" >
+										<a href="#"><img align="middle" src="img/gitlab.png" alt="img" width="175" height="80" /></a>										
 									</div>
 								</div>
 							</div>
