--- a/index.html
+++ b/index.html
@@ -878,10 +878,13 @@ Conducting technical research and development to enable  contionius innovation w
 	                            </nav>
 								<!-- /Portfolio Selector -->
 							</div>
+							
+							
 
 							<!-- Portfolio Items -->
-                           	<div class="portfolio_items anim_element" data-animation="fadeIn" data-animation-delay="250">
-                                <div class="portfolio_item mix webdesign col-md-4">
+
+							<div class="portfolio_items anim_element" data-animation="fadeIn" data-animation-delay="250">
+                                <div class="portfolio_item mix certifications col-md-4">
                                     <img src="img/portfolio1.jpg" alt="img" />
                                     <span class="overlay">
                                     	<a href="#" class="view_portfolio_item fa fa-eye"></a>
@@ -889,7 +892,7 @@ Conducting technical research and development to enable  contionius innovation w
                                     <div class="popup_data">
                                     	<div class="col-md-12">
                                     		<div class="row">
-	                                    		<img src="img/portfolio1.jpg" class="image" alt="img" />
+	                                    		<img src="img/awscert.jpg" class="image" alt="img" />
 	                                    	</div>
                                     	</div>
                                     	<div class="bottom col-md-12">
@@ -933,7 +936,7 @@ Conducting technical research and development to enable  contionius innovation w
                                     	</div>
                                     </div>
                                 </div>
-                                <div class="portfolio_item mix webdevelopment col-md-4">
+                                <div class="portfolio_item mix classroomtrainings col-md-4">
                                     <img src="img/portfolio2.jpg" alt="img" />
                                     <span class="overlay">
                                     	<a href="#" class="view_portfolio_item fa fa-eye"></a>
@@ -985,7 +988,7 @@ Conducting technical research and development to enable  contionius innovation w
                                     	</div>
                                     </div>
                                 </div>
-                                <div class="portfolio_item mix logodesign col-md-4">
+                                <div class="portfolio_item mix selfpacedtrainings col-md-4">
                                     <img src="img/portfolio3.jpg" alt="img" />
                                     <span class="overlay">
                                     	<a href="#" class="view_portfolio_item fa fa-eye"></a>
@@ -1037,7 +1040,7 @@ Conducting technical research and development to enable  contionius innovation w
                                     	</div>
                                     </div>
                                 </div>
-                                <div class="portfolio_item mix logodesign col-md-4">
+                                <div class="portfolio_item mix techconf col-md-4">
                                     <img src="img/portfolio4.jpg" alt="img" />
                                     <span class="overlay">
                                     	<a href="#" class="view_portfolio_item fa fa-eye"></a>
@@ -1089,120 +1092,17 @@ Conducting technical research and development to enable  contionius innovation w
                                     	</div>
                                     </div>
                                 </div>
-                                <div class="portfolio_item mix webdevelopment col-md-4">
-                                    <img src="img/portfolio5.jpg" alt="img" />
-                                    <span class="overlay">
-                                    	<a href="#" class="view_portfolio_item fa fa-eye"></a>
-                                    </span>
-                                    <div class="popup_data">
-                                    	<div class="col-md-12">
-                                    		<div class="row">
-	                                    		<img src="img/portfolio5.jpg" class="image" alt="img" />
-	                                    	</div>
-                                    	</div>
-                                    	<div class="bottom col-md-12">
-                                    		<div class="row">
-		                                    	<div class="col-md-9">
-		                                    		<h2 class="section_title"><span>DESCRIPTION</span></h2>
-		                                    		<div class="description">
-		                                    			<p>
-		                                    				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                                    				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                                    				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		                                    				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		                                    				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		                                    				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		                                    			</p>
-		                                    		</div>
-		                                    		<div class="social">
-		                                    			<span>SHARE PROJECT</span>
-		                                    			<a href="#" class="btn fa fa-facebook"></a>
-		                                    			<a href="#" class="btn fa fa-twitter"></a>
-		                                    			<a href="#" class="btn fa fa-youtube"></a>
-		                                    			<a href="#" class="btn fa fa-google-plus"></a>
-		                                    		</div>
-		                                    	</div>
-		                                    	<div class="col-md-3">
-		                                    		<h2 class="section_title"><span>DETAILS</span></h2>
-		                                    		<div class="details">
-		                                    			<span class="name">CLIENT:</span>
-		                                    			<span class="value">Envato</span>
-		                                    		</div>
-		                                    		<div class="details">
-		                                    			<span class="name">DATE:</span>
-		                                    			<span class="value">15 June 2014</span>
-		                                    		</div>
-		                                    		<div class="details">
-		                                    			<span class="name">Website:</span>
-		                                    			<span class="value"><a href="#">http://www.example.com</a></span>
-		                                    		</div>
-		                                    	</div>
-	                                    	</div>
-                                    	</div>
-                                    </div>
-                                </div>
-                                <div class="portfolio_item mix webdesign col-md-4">
-                                    <img src="img/portfolio6.jpg" alt="img" />
-                                    <span class="overlay">
-                                    	<a href="#" class="view_portfolio_item fa fa-eye"></a>
-                                    </span>
-                                    <div class="popup_data">
-                                    	<div class="col-md-12">
-                                    		<div class="row">
-	                                    		<img src="img/portfolio6.jpg" class="image" alt="img" />
-	                                    	</div>
-                                    	</div>
-                                    	<div class="bottom col-md-12">
-                                    		<div class="row">
-		                                    	<div class="col-md-9">
-		                                    		<h2 class="section_title"><span>DESCRIPTION</span></h2>
-		                                    		<div class="description">
-		                                    			<p>
-		                                    				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                                    				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                                    				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		                                    				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		                                    				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		                                    				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		                                    			</p>
-		                                    		</div>
-		                                    		<div class="social">
-		                                    			<span>SHARE PROJECT</span>
-		                                    			<a href="#" class="btn fa fa-facebook"></a>
-		                                    			<a href="#" class="btn fa fa-twitter"></a>
-		                                    			<a href="#" class="btn fa fa-youtube"></a>
-		                                    			<a href="#" class="btn fa fa-google-plus"></a>
-		                                    		</div>
-		                                    	</div>
-		                                    	<div class="col-md-3">
-		                                    		<h2 class="section_title"><span>DETAILS</span></h2>
-		                                    		<div class="details">
-		                                    			<span class="name">CLIENT:</span>
-		                                    			<span class="value">Envato</span>
-		                                    		</div>
-		                                    		<div class="details">
-		                                    			<span class="name">DATE:</span>
-		                                    			<span class="value">15 June 2014</span>
-		                                    		</div>
-		                                    		<div class="details">
-		                                    			<span class="name">Website:</span>
-		                                    			<span class="value"><a href="#">http://www.example.com</a></span>
-		                                    		</div>
-		                                    	</div>
-	                                    	</div>
-                                    	</div>
-                                    </div>
-                                </div>
                             </div>
+						</div>	
 							<!-- /Portfolio Items -->
 
-						</div>
 					</div>
 				</div>
 				<!-- /Portfolio Page -->
 
 				<!-- Parallax Item -->
 				<!-- Testimonials Parallax -->
+				<!--
 				<div class="parallax_item testimonials">
 					<div class="parallax_layer"></div>
 					<div class="overlay"></div>
@@ -1282,6 +1182,7 @@ Conducting technical research and development to enable  contionius innovation w
 						</div>
 					</div>
 				</div>
+				-->
 				<!-- /Testimonials Parallax -->
 				<!-- /Parallax Item -->
 				<!-- Blog Page-->
