--- a/demo.html
+++ b/demo.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-<h2 class="demo1">I am <span class="rotate">Simple, Customizable, Light Weight, Easy</span> Text Rotator with Style</h2>
+<h2 class="demo1">I am <span class="rotate">Simple, Customizable, Light Weight, Easy, test, Mybat, MyBag</span> Text Rotator with Style</h2>
   <div class="wrapper">
 	  <div class="main">
 	    <h1 class="demo1">Super <span class="rotate">Simple, Customizable, Light Weight, Easy</span> Text Rotator with Style</h1>
